--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ addons:
   chrome: stable
 before_install:
   - # start your web application and listen on `localhost`
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  ⋮
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
 script:
   - whereis google-chrome-stable
   - google-chrome-stable --version
